# blackmagic-rust-firmware

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.zed/: settings.json
scripts/: gdb_load.scr  run.sh
src/: system.rs
