[package]
edition = "2024"
name = "blackmagic-rust-firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# Change stm32u5g9zj to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "stm32u585ci", "time-driver-any", "memory-x", "exti" ]  }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9", default-features = false }
embedded-graphics = { version = "0.8.1" }
tinybmp = { version = "0.6.0" }

micromath = "2.0.0"
assign-resources = "0.5.0"

[features]
## Use secure registers when TrustZone is enabled
trustzone-secure = ["embassy-stm32/trustzone-secure"]

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false # <-

# When fixing things inside embassy it is useful to use the local checked out version sometimes ;)
[patch."https://github.com/embassy-rs/embassy.git"]
# embassy-stm32 = { path = "../../rust/embassy-git/embassy-stm32" }
# embassy-sync = { path = "../../rust/embassy-git/embassy-sync" }
# embassy-executor = { path = "../../rust/embassy-git/embassy-executor" }
# embassy-time = { path = "../../rust/embassy-git/embassy-time" }
# embassy-usb = { path = "../../rust/embassy-git/embassy-usb" }
# embassy-futures = { path = "../../rust/embassy-git/embassy-futures" }
